Build for Java 21 and run sweeper, close and STUN workers on virtual threads